--- a/test.cfg
+++ b/test.cfg
@@ -1,13 +1,13 @@
 server {
 	host: 192.168.0.1
 	port: 8080
-	name: test
+	name: asd
 }
 
 server {
 	host: 192.168.0.2
 	port: 8081
-	name: test2
+	name: asd2
 }
 
 asd
