--- a/test.cfg
+++ b/test.cfg
@@ -2,23 +2,9 @@ server {
 	Host: 127.0.0.1
 	pORt: 8080
 	name: asd
-	
-		location / {
-			root: www
-			dir-listing: true
-		}
 
-		location /test
-		{
+		location /test {
 			root: www/images
 			dir-listing: true
 		}
 }
-
-server {
-	host: 127.0.0.2
-	port: 8080
-	name: asd
-}
-
-asd
