removed the headers and added 404 file back

--- a/test1.cfg
+++ b/test1.cfg
@@ -12,6 +12,11 @@ server {
 			root: www/images
 			dir-listing: true
 		}
+
+		location /images {
+			root: www/images
+			dir-listing: true
+		}
 }
 
 server {
