--- a/test1.cfg
+++ b/test1.cfg
@@ -1,5 +1,5 @@
 server {
-	host: 127.0.0.1
+	host:         127.0.0.1
 	port: 8080
 	name: asd
 	
@@ -20,14 +20,14 @@ server {
 }
 
 server {
-	host: 127.0.0.2
+	host:127.0.0.2
 	port: 8080
 	name: asd
 
 		location / {
 			root: www
 			dir-listing: false
-			allowedmethods: GET, POST, DELETE
+			allowed-methods: GET, POST, DELETE
 		}
 }
 
