Hopefully made rooting work

--- a/test1.cfg
+++ b/test1.cfg
@@ -25,10 +25,15 @@ server {
 	name: asd
 
 		location / {
-			root: www
+			root: www/html
 			dir-listing: false
 			index: index.html
 			allowed-methods: GET, POST, DELETE
+		}
+
+		location /images {
+			root: www
+			dir-listing: true
 		}
 }
 
