Fixes to directory listing and cgi testing

--- a/test1.cfg
+++ b/test1.cfg
@@ -8,6 +8,11 @@ server {
 			dir-listing: true
 		}
 
+		location /123 {
+			root: www/html
+			dir-listing: true
+		}
+
 		location /test {
 			root: www/images
 			dir-listing: true
@@ -32,9 +37,10 @@ server {
 		}
 
 		location /images {
-			root: www
+			root: www/images
 			dir-listing: true
 		}
+
 }
 
 asd
