Added more configs for servers

--- a/test1.cfg
+++ b/test1.cfg
@@ -2,6 +2,8 @@ server {
 	host:         127.0.0.1
 	port: 8080
 	name: asd
+	bodylimit: 50000
+	timeout: 5
 	
 		location / {
 			root: www
@@ -28,6 +30,7 @@ server {
 	host:127.0.0.2
 	port: 8080
 	name: asd
+	timeout: 10
 
 		location / {
 			root: www/html
