Rooting still a bit broken but good progress made

--- a/test1.cfg
+++ b/test1.cfg
@@ -21,6 +21,11 @@ server {
 		}
 
 		location /images {
+			root: www/html
+			dir-listing: true
+		}
+
+		location /images/hello {
 			root: www
 			dir-listing: true
 		}
