Trying to fix errors with the root..

--- a/test1.cfg
+++ b/test1.cfg
@@ -14,13 +14,12 @@ server {
 			root: www/html
 			dir-listing: true
 		}
-
 		location /test {
 			root: www/images
 			dir-listing: true
 		}
 
-		location /images {
+		location /www {
 			root: www/html
 			dir-listing: true
 		}
