properly working rooting maybe?

--- a/test1.cfg
+++ b/test1.cfg
@@ -10,17 +10,18 @@ server {
 			dir-listing: true
 		}
 
-		location /123 {
-			root: www/html
-			dir-listing: true
-		}
-		location /test {
-			root: www/images
+		location /test/123 {
+			root: www
 			dir-listing: true
 		}
 
 		location /www {
 			root: www/html
+			dir-listing: true
+		}
+
+		location /images {
+			root: www
 			dir-listing: true
 		}
 
