Fixing issues with rooting and making directories not identical with normal files

--- a/test1.cfg
+++ b/test1.cfg
@@ -10,23 +10,23 @@ server {
 			dir-listing: true
 		}
 
-		location /test/123/ {
+		location /images/test {
 			root: www
 			index: index.html
 			dir-listing: false
 		}
 
-		location /www/ {
+		location /www {
 			root: www/html
 			dir-listing: true
 		}
 
-		location /images/ {
+		location /images {
 			root: www
-			dir-listing: true
+			index: index.html
 		}
 
-		location /images/hello/ {
+		location /images/hello {
 			root: www
 			dir-listing: true
 		}
