corrections to the config reading

--- a/test1.cfg
+++ b/test1.cfg
@@ -12,8 +12,7 @@ server {
 
 		location /images/test {
 			root: www
-			index: index.html
-			dir-listing: false
+			dir-listing: true
 		}
 
 		location /www {
@@ -23,11 +22,12 @@ server {
 
 		location /images {
 			root: www
-			index: index.html
+			dir-listing: true
 		}
 
-		location /images/hello {
+		location /html {
 			root: www
+			index: index.html
 			dir-listing: true
 		}
 }
