--- a/test1.cfg
+++ b/test1.cfg
@@ -35,7 +35,7 @@ server {
 
 
 server {
-	host:127.0.0.2
+	host:127.0.0.1
 	port: 8080
 	name: asd
 	timeout: 5
@@ -48,7 +48,7 @@ server {
 		}
 
 		location /images {
-			root: www/images
+			root: www
 			dir-listing: true
 		}
 
