adding print and changing root in .cfg file and remowing www/ from image path

--- a/test1.cfg
+++ b/test1.cfg
@@ -4,7 +4,7 @@ server {
 	name: asd
 	bodylimit: 50000
 	timeout: 5
-	
+
 		location / {
 			root: www
 			dir-listing: true
@@ -41,9 +41,9 @@ server {
 	timeout: 5
 
 		location / {
-			root: www/html
+			root: www
 			dir-listing: false
-			index: index.html
+			index: html/index.html
 			allowed-methods: GET, POST, DELETE
 		}
 
@@ -54,4 +54,3 @@ server {
 
 }
 
-asd
