Server now only sends response when client socket is ready to read.

--- a/test1.cfg
+++ b/test1.cfg
@@ -1,7 +1,7 @@
 server {
 	host:        127.0.0.1
 	port: 8080
-	name: localhost:8080
+	name:
 	bodylimit: 50000
 	timeout: 5
 
@@ -37,7 +37,7 @@ server {
 server {
 	host:127.0.0.2
 	port: 8080
-	name: asd
+	name:
 	timeout: 5
 
 		location / {
