More error handling for config

--- a/test.cfg
+++ b/test.cfg
@@ -1,10 +1,4 @@
-server {
-	Host: 127.0.0.1
-	pORt: 8080
-	name: asd
-
-		location /test {
-			root: www/images
-			dir-listing: true
-		}
+server{
+	host:        127.0.0.1
+	port: 8080
 }
