--- a/invalid_configs/braceTypo.cfg
+++ b/invalid_configs/braceTypo.cfg
@@ -60,4 +60,140 @@ server {
 		}
 
 }
+server {
+	host:127.0.0.3
+	port: 8080
+	name:
+	timeout: 5
 
+		location / {
+			root: www
+			dir-listing: false
+			index: html/index.html
+			allowed-methods: GET, POST, DELETE
+		}
+
+		location /images {
+			root: www
+			dir-listing: true
+		}
+
+}
+
+server {
+	host:127.0.0.4
+	port: 8080
+	name:
+	timeout: 5
+
+		location / {
+			root: www
+			dir-listing: false
+			index: html/index.html
+			allowed-methods: GET, POST, DELETE
+		}
+
+		location /images {
+			root: www
+			dir-listing: true
+		}
+
+}
+
+server {
+	host:127.0.0.5
+	port: 8080
+	name:
+	timeout: 5
+
+		location / {
+			root: www
+			dir-listing: false
+			index: html/index.html
+			allowed-methods: GET, POST, DELETE
+		}
+
+		location /images {
+			root: www
+			dir-listing: true
+		}
+
+}
+
+server {
+	host:127.0.0.6
+	port: 8080
+	name:
+	timeout: 5
+
+		location / {
+			root: www
+			dir-listing: false
+			index: html/index.html
+			allowed-methods: GET, POST, DELETE
+		}
+
+		location /images {
+			root: www
+			dir-listing: true
+		}
+
+}
+
+server {
+	host:127.0.0.7
+	port: 8080
+	name:
+	timeout: 5
+
+		location / {
+			root: www
+			dir-listing: false
+			index: html/index.html
+			allowed-methods: GET, POST, DELETE
+		}
+
+		location /images {
+			root: www
+			dir-listing: true
+		}
+
+}
+server {
+	host:127.0.0.8
+	port: 8080
+	name:
+	timeout: 5
+
+		location / {
+			root: www
+			dir-listing: false
+			index: html/index.html
+			allowed-methods: GET, POST, DELETE
+		}
+
+		location /images {
+			root: www
+			dir-listing: true
+		}
+
+}
+server {
+	host:127.0.0.2
+	port: 8080
+	name:
+	timeout: 5
+
+		location / {
+			root: www
+			dir-listing: false
+			index: html/index.html
+			allowed-methods: GET, POST, DELETE
+		}
+
+		location /images {
+			root: www
+			dir-listing: true
+		}
+
+}
