Added cleaning loop to ServerManagers destructor

--- a/invalid_configs/server.cfg
+++ b/invalid_configs/server.cfg
@@ -45,7 +45,29 @@ server {
     name:
     timeout: 5
 
-    location / {
+    location / {	/*	char buffer[1024];
+		ssize_t nbytes;
+		std::cout << "hello from read from cgi\n";
+		nbytes = read(pipeFd[0], buffer, sizeof(buffer));
+		if (nbytes == -1)
+		{
+			close(pipeFd[0]);
+			this->_clientPipe.erase(pipeFd[0]);
+			throw std::runtime_error("read() failed");
+		}
+		else if (nbytes == 0)
+		{
+			int clientSocket = this->_clientPipe[pipeFd[0]];
+			this->_clientInfos[clientSocket].cgiResponseReady = true;
+			close(pipeFd[0]);
+			this->_clientPipe.erase(pipeFd[0]);
+		}
+		else
+		{
+			int clientSocket = this->_clientPipe[pipeFd[0]];
+			this->_clientInfos[clientSocket].cgiResponse.append(buffer, nbytes);
+			std::cout << "from cgi fd " << this->_clientInfos[clientSocket].cgiResponse << std::endl;
+		}*/ 
         root: www
         dir-listing: false
         index: html/index.html
