made allowed methods work

--- a/test1.cfg
+++ b/test1.cfg
@@ -16,26 +16,31 @@ server {
 		location / {
 			root: www
 			dir-listing: true
+			allowed-methods: GET, POST, DELETE
 		}
 
 		location /images/test {
 			root: www
 			dir-listing: true
+			allowed-methods: GET, POST, DELETE
 		}
 
 		location /www {
 			root: www/html
 			dir-listing: true
+			allowed-methods: GET, POST, DELETE
 		}
 
 		location /images {
 			root: www
 			dir-listing: true
+			allowed-methods: GET, POST, DELETE
 		}
 
 		location /html {
 			root: www/html
 			dir-listing: true
+			allowed-methods: GET, POST, DELETE
 		}
 }
 
