Fixed rooting loop to work with more cases

--- a/test1.cfg
+++ b/test1.cfg
@@ -25,6 +25,12 @@ server {
 			allowed-methods: GET, POST, DELETE
 		}
 
+		location /images/test/asd/test {
+			root: www
+			dir-listing: true
+			allowed-methods: GET, POST, DELETE
+		}
+
 		location /www {
 			root: www/html
 			dir-listing: true
