--- a/test1.cfg
+++ b/test1.cfg
@@ -19,6 +19,11 @@ server {
 			allowed-methods: GET, POST, DELETE
 		}
 
+		location /redirect {
+			redirect: https://www.google.com
+			allowed-methods: GET
+		}
+
 		location /images/test {
 			root: www
 			dir-listing: true
