changing request exceptions to responseExceptions to streamline the exception handling

--- a/test1.cfg
+++ b/test1.cfg
@@ -4,14 +4,14 @@ server {
 	name:
 	bodylimit: 1000
 	timeout: 5
-	400:
-	403:
-	404:
-	405:
-	500:
-	501:
-	505:
-	515:
+	400: ./www/400.html
+	403: ./www/403.html
+	404: ./www/404.html
+	405: ./www/405.html
+	415: ./www/415.html
+	500: ./www/500.html
+	501: ./www/501.html
+	505: ./www/505.html
 
 		location / {
 			root: www
