Moved Method check to correct location

--- a/test1.cfg
+++ b/test1.cfg
@@ -45,7 +45,7 @@ server {
 		location /images {
 			root: www
 			dir-listing: true
-			allowed-methods: GET, POST, DELETE
+			allowed-methods: POST, DELETE
 		}
 
 		location /html {
