--- a/test1.cfg
+++ b/test1.cfg
@@ -8,6 +8,7 @@ server {
 	403: ./www/403.html
 	404: ./www/404.html
 	405: ./www/404.html
+	408: ./www/408.html
 	415: ./www/415.html
 	500: ./www/500.html
 	501: ./www/501.html
