Fixed request body not being parsed properly

--- a/test1.cfg
+++ b/test1.cfg
@@ -1,7 +1,7 @@
 server {
 	host:        127.0.0.1
 	port: 8080
-	name:
+	name:    localhost:8080
 	bodylimit: 100000
 	timeout: 5
 	400: ./www/400.html
@@ -53,8 +53,6 @@ server {
 		}
 }
 
-
-
 server {
 	host:127.0.0.2
 	port: 8080
@@ -74,4 +72,3 @@ server {
 		}
 
 }
-
